--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -16,4 +16,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Say hello world
-        run: echo "hello world"
+        run: echo "hello mundo"
