try with condition

--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -16,4 +16,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Say hello world
+        if: github.event_name == 'push'
         run: echo "hello mundo2"
